load modal with data, need to fix errors, fixed row overflow issue

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,10 +1,11 @@
 
 #card-header {
     height: 23rem;
-    margin: 1rem;
+    margin: 1.5rem;
     width: 25rem;
     text-align: center;
     border-radius: 21px;
+    /* align-content: center; */
     
 }
 #card-header:hover {
@@ -17,8 +18,8 @@
 }
 
 #card-img{
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     height:15rem;
 }
 
